## Process this file with automake to produce Makefile.in


data_DATA = captcha_failed \
	logining.gif \
	css/chat.css \
	css/login.css \
	css/logining.css \
	css/qqchat.css \
	face/default_face \
	face/default_group_face \
	icons/stock_chat.png \
	icons/stock_friend.png \
	icons/stock_friend.svg \
	icons/stock_group.svg \
	icons/wchat.png \
	status/away.png \
	status/busy.png \
	status/callme.png \
	status/hidden.png \
	status/offline.png \
	status/online.png \
	status/silent.png
